--- a/index.html
+++ b/index.html
@@ -380,51 +380,21 @@
 </div>
 <div class="last_menu">
     <div class="options">
-        <div class="chose_products_option">
-            <div class="chose_img">
-                <div class="firstimgblack">
-                    <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/blackfirst.png" alt="blackfirst">
-                </div>
-                <div class="lineimgblack">
-                    <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/blackline.png" alt="blackline">
-                </div>
-                <div class="secondimgblack">
-                    <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/blacksecond.png" alt="blacksecond">
-                </div>
-            </div>
+        <a href="#" class="chose_products_option">
+            <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/choseimg.png" alt="choseimg">
             <div class="size_text">Chose Product</div>
-        </div>
-        <div class="register_login_option">
-            <div class="register_login_img">
-                <div class="firstimgblue">
-                    <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/bluefirst.png" alt="bluefirst">
-                </div>
-                <div class="lineimgblue">
-                    <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/blueline.png" alt="blueline">
-                </div>
-                <div class="secondimgblue">
-                    <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/bluesecond.png" alt="bluesecond">
-                </div>
-            </div>
+        </a>
+        <a href="#" class="register_login_option">
+            <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/register_loginimg.png" alt="register_loginimg">
             <div class="size_text">Register/ Login</div>
-        </div>
-        <div class="checkout_option">
-            <div class="checkout_img">
-                <div class="firstimgred">
-                    <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/redfirst.png" alt="redfirst">
-                </div>
-                <div class="lineimgred">
-                    <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/redline.png" alt="redline">
-                </div>
-                <div class="secondimgred">
-                    <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/redsecond.png" alt="redsecond">
-                </div>
-            </div>
+        </a>
+        <a href="#" class="checkout_option">
+            <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/checkoutimg.png" alt="checkoutimg">
             <div class="size_text">Checkout</div>
-        </div>
+        </a>
     </div>
     <div class="register_option">
-        <button class="register_button">Register Now</button>
+        <a href="#" class="register_button">Register Now</a>
     </div>
 </div>
     <!--Часть Максима конец-->
@@ -484,7 +454,7 @@
             <div class="footer-under-title">
             <div class="footer_signup">
                 <input type="text" placeholder="E.G.:ABC@DOMAIN.COM">
-                <button>SUBSCRIBE NOW</button>
+                <a href="#">SUBSCRIBE NOW</a>
             </div>
             </div>
             <h2 class = "footer_tittle">KEEP IN TOUCH</h2>
