--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="top-container">
             <div class="logo_img">
                 <a href="#">
-                    <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/logo_no_copy.png" alt="Logo" title="gift shop">
+                    <img src="images/logo_no_copy.png" alt="Logo" title="gift shop">
                     <div class="copyright_logo">
                         <span>copyright logo</span>
                     </div>
