--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/men.png" alt="Men's wear">
                 <div class="upper-text">
                     <h2 class="title">Men’s wear</h2>
-                    <p class="text">Lorem Ipsum is simply dummy text of the<br>printing and typesetting industry. Lorem
+                    <p class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                     </p>
                 </div>
                 <div class="lower-text">
@@ -401,8 +401,6 @@
 
 <!-- начало второй части Ани-->
 <footer>
-    <hr>
-    <div class="footer-line"></div>
     <div class="footer-columns">
         <div class="footer-midcontainer">
             <h2 class = "footer_tittle">SHOPPING WITH US</h2>
@@ -478,7 +476,6 @@
             </ul>
         </div>
     </div>
-    <hr>
     <div class="copyright">
         <div class="copyright_left">
             Copyright©2014 Gift Shop, All right reserved
@@ -487,7 +484,6 @@
             Designed by <a href="#">Amysxain</a>
         </div>
     </div>
-    <hr>
 </footer>
 <!-- конец второй части Ани-->
 </div>
