--- a/index.html
+++ b/index.html
@@ -380,15 +380,15 @@
 </div>
 <div class="last_menu">
     <div class="options">
-        <a href="#" class="chose_products_option">
+        <a href="#" class="chose_products_option" title="Chose Product">
             <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/choseimg.png" alt="choseimg">
             <div class="size_text">Chose Product</div>
         </a>
-        <a href="#" class="register_login_option">
+        <a href="#" class="register_login_option" title="Register/Login">
             <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/register_loginimg.png" alt="register_loginimg">
             <div class="size_text">Register/ Login</div>
         </a>
-        <a href="#" class="checkout_option">
+        <a href="#" class="checkout_option" title="Checkout">
             <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/checkoutimg.png" alt="checkoutimg">
             <div class="size_text">Checkout</div>
         </a>
@@ -452,7 +452,7 @@
             <div class="footer-under-title">
             <div class="footer_signup">
                 <input type="text" placeholder="E.G.:ABC@DOMAIN.COM">
-                <a href="#">SUBSCRIBE NOW</a>
+                <a href="#" title="Subscribe now">SUBSCRIBE NOW</a>
             </div>
             </div>
             <h2 class = "footer_tittle">KEEP IN TOUCH</h2>
