--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class = "img-container slider">
         <div class="left-col">
             <div id="men" class="slider_element" title="Men's wear">
-                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/men.png" alt="Men's wear">
+                <img src="images/men.png" alt="Men's wear">
                 <div class="upper-text">
                     <h2 class="title">Men’s wear</h2>
                     <p class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
@@ -83,7 +83,7 @@
         </div>
         <div class="right-col">
             <div id = "women" class="slider_element" title="Women's wear">
-                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/women.png" alt="Women's wear">
+                <img src="images/women.png" alt="Women's wear">
                 <div class="upper-text">
                     <h2 class="title">Women’s wear</h2>
                     <p class="text">Lorem Ipsum is simply dummy text<br>of the printing and typesetting
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div id = "kids" class="slider_element" title="Kids">
-                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/kids1.png" alt="Baby shop">
+                <img src="images/kids1.png" alt="Baby shop">
                 <div class="upper-layer" title="Kids"></div>
                 <div class="buttons-baby-shop">
                     <div class="buttons-text"  title="Baby shop">
@@ -128,7 +128,7 @@
                 </form>
             </div>
             <div id ="crafts" class="slider_element" title="Crafts">
-                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/crafts.png" alt="Crafts">
+                <img src="images/crafts.png" alt="Crafts">
                 <div class="buttons-crafts">
                     <div class="buttons-text"  title="Crafts">
                         Crafts
@@ -150,7 +150,7 @@
         </div>
         <div class="right-col">
             <div id="jewelry" class="slider_element" title="Jewelry">
-                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/jewelry.png" alt="Jewelry">
+                <img src="images/jewelry.png" alt="Jewelry">
                 <div class="jewelry-title">
                     <div class="main-rectangle"></div>
                     <div class="triangle"></div>
@@ -190,10 +190,10 @@
         </div>
         <div class="new-products-images">
             <div class="new-products-image" title="New product 1">
-                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/new_prod1.png" alt="new-prod1">
+                <img src="images/new_prod1.png" alt="new-prod1">
             </div>
             <div class="new-products-center-image" title="New product 2">
-                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/new_prod2.png" alt="new-prod2">
+                <img src="images/new_prod2.png" alt="new-prod2">
                 <div class="buttons-baby-shop"  title="">
                     <div class="buttons-text"  title="Baby shop">
                         Baby Shop
@@ -212,7 +212,7 @@
                 </div>
             </div>
             <div class="new-products-image" title="New product 3">
-                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/new_prod3.png" alt="new-prod3">
+                <img src="images/new_prod3.png" alt="new-prod3">
             </div>
         </div>
     </div>
@@ -237,7 +237,7 @@
         </div>
         <div class="featured-products-images">
             <div class="featured-products-image red" title="Featured product 1">
-                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/woman1.png" alt="image-1">
+                <img src="images/woman1.png" alt="image-1">
                 <div class="product-inf">
                     <div class="product-description" title="">
                         <div class="product-description-title">
@@ -267,7 +267,7 @@
                 <div class="note red-note">20% OFF</div>
             </div>
             <div class="featured-products-image red" title="Featured product 2">
-                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/woman2.png" alt="image-2">
+                <img src="images/woman2.png" alt="image-2">
                 <div class="product-inf">
                     <div class="product-description" title="">
                         <div class="product-description-title">
@@ -296,7 +296,7 @@
                 </div>
             </div>
             <div class="featured-products-image blue" title="Featured product 3">
-                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/woman3.png" alt="image-3">
+                <img src="images/woman3.png" alt="image-3">
                 <div class="product-inf">
                     <div class="product-description" title="">
                         <div class="product-description-title">
@@ -326,7 +326,7 @@
                 <div class="note blue-note">New</div>
             </div>
             <div class="featured-products-image red" title="Featured product 4">
-                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/woman4.png" alt="image-4">
+                <img src="images/woman4.png" alt="image-4">
                 <div class="product-inf">
                     <div class="product-description" title="">
                         <div class="product-description-title">
@@ -381,20 +381,20 @@
 <div class="last_menu">
     <div class="options">
         <a href="#" class="chose_products_option" title="Chose Product">
-            <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/choseimg.png" alt="choseimg">
+            <img src="images/choseimg.png" alt="choseimg">
             <div class="size_text">Chose Product</div>
         </a>
         <a href="#" class="register_login_option" title="Register/Login">
-            <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/register_loginimg.png" alt="register_loginimg">
+            <img src="images/register_loginimg.png" alt="register_loginimg">
             <div class="size_text">Register/ Login</div>
         </a>
         <a href="#" class="checkout_option" title="Checkout">
-            <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/checkoutimg.png" alt="checkoutimg">
+            <img src="images/checkoutimg.png" alt="checkoutimg">
             <div class="size_text">Checkout</div>
         </a>
     </div>
     <div class="register_option">
-        <a href="#" class="register_button">Register Now</a>
+        <a href="#" class="register_button" title="Register Now">Register Now</a>
     </div>
 </div>
     <!--Часть Максима конец-->
