--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 </div>
                             </label>
                         </div>
-                    <button id="search_button" type="submit"><i class ="fa-flip-horizontal fa-solid fa-magnifying-glass fa-4x"></i></button>
+                    <button id="search_button" type="submit" title="Search products"><i class ="fa-flip-horizontal fa-solid fa-magnifying-glass fa-4x"></i></button>
                 </form>
             </div>
             <div id ="crafts" class="slider_element" title="Crafts">
