--- a/index.html
+++ b/index.html
@@ -363,12 +363,12 @@
 
 <div class="who_we_are">
     <div class="who_we_are_header">
-        <div class="who_we_are_header_text">
+        <span class="who_we_are_header_text">
             Who We Are
-        </div>
+        </span>
         <div class="line"></div>
     </div>
-    <div class="who_we_are_text">
+    <p class="who_we_are_text">
         Lorem Ipsum is simply dummy text of the printing and typesetting industry.
         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
         when an unknown printer took a galley of type and scrambled it to make a type specimen book.
@@ -376,21 +376,21 @@
         remaining essentially unchanged.
         It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
         and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-    </div>
+    </p>
 </div>
 <div class="last_menu">
     <div class="options">
         <a href="#" class="chose_products_option" title="Chose Product">
             <img src="images/choseimg.png" alt="choseimg">
-            <div class="size_text">Chose Product</div>
+            <span class="size_text">Chose Product</span>
         </a>
         <a href="#" class="register_login_option" title="Register/Login">
             <img src="images/register_loginimg.png" alt="register_loginimg">
-            <div class="size_text">Register/ Login</div>
+            <span class="size_text">Register/ Login</span>
         </a>
         <a href="#" class="checkout_option" title="Checkout">
             <img src="images/checkoutimg.png" alt="checkoutimg">
-            <div class="size_text">Checkout</div>
+            <span class="size_text">Checkout</span>
         </a>
     </div>
     <div class="register_option">
