--- a/index.html
+++ b/index.html
@@ -13,110 +13,108 @@
 <body>
 <div id="content">
     <!-- начало первой части Ани-->
-<header class="header">
-    <div class="menu">
-        <div class="top-container">
-            <div class="logo_img">
-                <a href="#">
-                    <img src="images/logo_no_copy.png" alt="Logo" title="gift shop">
-                    <div class="copyright_logo">
-                        <span>copyright logo</span>
-                    </div>
-                </a>
-            </div>
-            <div class="top-bars">
-                <div class="top">
-                    <ul class="first_menu">
-                        <li><a href="#" title="Sell">Sell</a></li>
-                        <li><a href="#" title="Registry">Registry</a></li>
-                        <li><a href="#" title="Community">Community</a></li>
-                        <li><a href="#" title="Blogs">Blogs</a></li>
-                        <li><a href="#" title="Mobile">Mobile</a></li>
-                        <li><a href="#" title="Gift Cards">Gift Cards</a></li>
-                    </ul>
+    <header class="header">
+        <div class="menu">
+            <div class="top-container">
+                <div class="logo_img">
+                    <a href="#">
+                        <img src="images/logo_no_copy.png" alt="Logo" title="gift shop">
+                        <div class="copyright_logo">
+                            <span>copyright logo</span>
+                        </div>
+                    </a>
                 </div>
-                <div class="lower">
-                    <ul class="second_menu">
-                        <li><a href="#" title="Register">Register</a></li>
-                        <li><a href="#" title="Sign In">Sign In</a></li>
-                        <li class = "bar-img"><a href="#" title="Go to whislost">
+                <div class="top-bars">
+                    <div class="top">
+                        <ul class="first_menu">
+                            <li><a href="#" title="Sell">Sell</a></li>
+                            <li><a href="#" title="Registry">Registry</a></li>
+                            <li><a href="#" title="Community">Community</a></li>
+                            <li><a href="#" title="Blogs">Blogs</a></li>
+                            <li><a href="#" title="Mobile">Mobile</a></li>
+                            <li><a href="#" title="Gift Cards">Gift Cards</a></li>
+                        </ul>
+                    </div>
+                    <div class="lower">
+                        <ul class="second_menu">
+                            <li><a href="#" title="Register">Register</a></li>
+                            <li><a href="#" title="Sign In">Sign In</a></li>
+                            <li class = "bar-img"><a href="#" title="Go to whislost">
                                 Whislost <i class="fa-solid fa-gift fa-lg"></i>
                             </a></li>
-                        <li class="bar-img">
-                            <a href="#" title="Show cart">
-                                Cart <i class="fa-solid fa-shopping-cart fa-lg"></i>
-                            </a>
-                        </li>
-                    </ul>
+                            <li class="bar-img">
+                                <a href="#" title="Show cart">
+                                    Cart <i class="fa-solid fa-shopping-cart fa-lg"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <nav class="navigation">
+                <ul class = "nav_buttons">
+                    <li><a href="#" title="Art">Art</a></li>
+                    <li><a href="#" title="Home & Living">Home & Living</a></li>
+                    <li><a href="#" title="Jewelry">Jewelry</a></li>
+                    <li><a href="#" title="Women">Women</a></li>
+                    <li><a href="#" title="Men">Men</a></li>
+                    <li><a href="#" title="Kids">Kids</a></li>
+                    <li><a href="#" title="Vintage">Vintage</a></li>
+                    <li><a href="#" title="Weddings">Weddings</a></li>
+                    <li><a href="#" title="More">More</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <div class="navigation_img">
+        <div class = "img-container slider">
+            <div class="left-col">
+                <div id="men" class="slider_element" title="Men's wear">
+                    <div class="men-text">
+                        <div class="upper-text">
+                            <h2 class="title">Men’s wear</h2>
+                            <p class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                            </p>
+                        </div>
+                        <div class="lower-text">
+                            <p class="text">Lorem Ipsum is simply dummy text</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="right-col">
+                <div id = "women" class="slider_element" title="Women's wear">
+                    <div class="upper-text">
+                        <h2 class="title">Women’s wear</h2>
+                        <p class="text">Lorem Ipsum is simply dummy text<br>of the printing and typesetting
+                        </p>
+                    </div>
+                </div>
+                <div id = "kids" class="slider_element" title="Kids">
+                    <div class="buttons-baby-shop">
+                        <span class="buttons-text"  title="Baby shop">
+                            Baby Shop
+                        </span>
+                        <div class="buttons-gift" title="Whislost">
+                            <i class="fa-solid fa-gift"></i>
+                        </div>
+                        <div class="buttons-cart" title="Add to cart">
+                            <i class="fa-solid fa-shopping-cart"></i>
+                        </div>
+                        <div class="buttons-price">
+                            <span class="dollar-sign">$</span>
+                            <span class="dollar">99.</span>
+                            <span class="cents">00</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <nav class="navigation">
-            <ul class = "nav_buttons">
-                <li><a href="#" title="Art">Art</a></li>
-                <li><a href="#" title="Home & Living">Home & Living</a></li>
-                <li><a href="#" title="Jewelry">Jewelry</a></li>
-                <li><a href="#" title="Women">Women</a></li>
-                <li><a href="#" title="Men">Men</a></li>
-                <li><a href="#" title="Kids">Kids</a></li>
-                <li><a href="#" title="Vintage">Vintage</a></li>
-                <li><a href="#" title="Weddings">Weddings</a></li>
-                <li><a href="#" title="More">More</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
-<div class="navigation_img">
-    <div class = "img-container slider">
-        <div class="left-col">
-            <div id="men" class="slider_element" title="Men's wear">
-                <img src="images/men.png" alt="Men's wear">
-                <div class="upper-text">
-                    <h2 class="title">Men’s wear</h2>
-                    <p class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                    </p>
-                </div>
-                <div class="lower-text">
-                    <p class="text">Lorem Ipsum is simply dummy text</p>
-                </div>
-            </div>
-        </div>
-        <div class="right-col">
-            <div id = "women" class="slider_element" title="Women's wear">
-                <img src="images/women.png" alt="Women's wear">
-                <div class="upper-text">
-                    <h2 class="title">Women’s wear</h2>
-                    <p class="text">Lorem Ipsum is simply dummy text<br>of the printing and typesetting
-                    </p>
-                </div>
-            </div>
-            <div id = "kids" class="slider_element" title="Kids">
-                <img src="images/kids1.png" alt="Baby shop">
-                <div class="upper-layer" title="Kids"></div>
-                <div class="buttons-baby-shop">
-                    <div class="buttons-text"  title="Baby shop">
-                        Baby Shop
-                    </div>
-                    <div class="buttons-gift" title="Whislost">
-                        <i class="fa-solid fa-gift"></i>
-                    </div>
-                    <div class="buttons-cart" title="Add to cart">
-                        <i class="fa-solid fa-shopping-cart"></i>
-                    </div>
-                    <div class="buttons-price">
-                        <span class="dollar-sign">$</span>
-                        <span class="dollar">99.</span>
-                        <span class="cents">00</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="img-container">
-        <div class="left-col">
-            <div id="search" class="slider_element">
-                <form id = "search_form">
-                      <div class="search-field">
+        <div class="img-container">
+            <div class="left-col">
+                <div id="search" class="slider_element">
+                    <form id = "search_form">
+                        <div class="search-field">
                             <label class="search-box">
                                 <input required type="text">
                                 <div class="placeholder-text">Search your product here
@@ -124,48 +122,47 @@
                                 </div>
                             </label>
                         </div>
-                    <button id="search_button" type="submit" title="Search products"><i class ="fa-flip-horizontal fa-solid fa-magnifying-glass fa-4x"></i></button>
-                </form>
-            </div>
-            <div id ="crafts" class="slider_element" title="Crafts">
-                <img src="images/crafts.png" alt="Crafts">
-                <div class="buttons-crafts">
-                    <div class="buttons-text"  title="Crafts">
-                        Crafts
-                    </div>
-                    <div class="buttons-gift" title="Whislost">
-                        <i class="fa-solid fa-gift"></i>
-                    </div>
-                    <div class="buttons-cart" title="Add to cart">
-                        <i class="fa-solid fa-shopping-cart"></i>
-                    </div>
-                    <div class="buttons-price">
-                        <span class="dollar-sign">$</span>
-                        <span class="dollar">99.</span>
-                        <span class="cents">00</span>
-                    </div>
+                        <button id="search_button" type="submit" title="Search products">
+                            <i class ="fa-flip-horizontal fa-solid fa-magnifying-glass fa-4x"></i>
+                        </button>
+                    </form>
                 </div>
-
-            </div>
-        </div>
-        <div class="right-col">
-            <div id="jewelry" class="slider_element" title="Jewelry">
-                <img src="images/jewelry.png" alt="Jewelry">
-                <div class="jewelry-title">
-                    <div class="main-rectangle"></div>
-                    <div class="triangle"></div>
-                    <div class="rectangle">
-                        <div class="ellipse">
-                                <i class="fa-solid fa-angle-right"></i>
+                <div id ="crafts" class="slider_element" title="Crafts">
+                    <div class="buttons-crafts">
+                        <span class="buttons-text"  title="Crafts">
+                            Crafts
+                        </span>
+                        <div class="buttons-gift" title="Whislost">
+                            <i class="fa-solid fa-gift"></i>
+                        </div>
+                        <div class="buttons-cart" title="Add to cart">
+                            <i class="fa-solid fa-shopping-cart"></i>
+                        </div>
+                        <div class="buttons-price">
+                            <span class="dollar-sign">$</span>
+                            <span class="dollar">99.</span>
+                            <span class="cents">00</span>
                         </div>
                     </div>
                 </div>
-                <div class="jewelry-name">JEWELRY</div>
+            </div>
+            <div class="right-col">
+                <div id="jewelry" class="slider_element" title="Jewelry">
+                    <div class="jewelry-title">
+                        <div class="main-rectangle"></div>
+                        <div class="rectangle">
+                            <div class="ellipse">
+                                <i class="fa-solid fa-angle-right"></i>
+                            </div>
+                        </div>
+                        <div class="triangle"></div>
+                        <span class="jewelry-name">JEWELRY</span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<!-- конец первой части Ани-->
+    <!-- конец первой части Ани-->
     
     <!--Часть Тани начало-->
     
@@ -477,12 +474,12 @@
         </div>
     </div>
     <div class="copyright">
-        <div class="copyright_left">
-            Copyright©2014 Gift Shop, All right reserved
-        </div>
-        <div class="designed_by">
-            Designed by <a href="#">Amysxain</a>
-        </div>
+         <span class="copyright_left">
+                Copyright©2014 Gift Shop, All right reserved
+            </span>
+            <span class="designed_by">
+                Designed by <a href="#">Amysxain</a>
+           </span>
     </div>
 </footer>
 <!-- конец второй части Ани-->
