--- a/index.html
+++ b/index.html
@@ -169,32 +169,25 @@
     <div class="new-products">
         <div class="products-header">
             <div class="line"></div>
-            <div class="products-header-text">
+            <span class="products-header-text">
                 New Products
-            </div>
+            </span>
             <div class="products-header-arrows">
-                <a>
                 <div class="new-products-header-arrow" title="Previous product">
-                                <i class="fa-solid fa-angle-left"></i>
+                    <i class="fa-solid fa-angle-left"></i>
                 </div>
-                </a>
-                <a>
                 <div class="new-products-header-arrow" title="Next product">
-                                <i class="fa-solid fa-angle-right"></i>
+                    <i class="fa-solid fa-angle-right"></i>
                 </div>
-                </a>
             </div>
         </div>
         <div class="new-products-images">
-            <div class="new-products-image" title="New product 1">
-                <img src="images/new_prod1.png" alt="new-prod1">
-            </div>
-            <div class="new-products-center-image" title="New product 2">
-                <img src="images/new_prod2.png" alt="new-prod2">
-                <div class="buttons-baby-shop"  title="">
-                    <div class="buttons-text"  title="Baby shop">
+            <div class="new-products-image-1" title="New product 1"></div>
+            <div class="new-products-image-2" title="New product 2">
+                <div class="buttons-baby-shop" title="">
+                    <span class="buttons-text" title="Baby shop">
                         Baby Shop
-                    </div>
+                    </span>
                     <div class="buttons-gift" title="Whislost">
                         <i class="fa-solid fa-gift"></i>
                     </div>
@@ -208,28 +201,20 @@
                     </div>
                 </div>
             </div>
-            <div class="new-products-image" title="New product 3">
-                <img src="images/new_prod3.png" alt="new-prod3">
-            </div>
+            <div class="new-products-image-3" title="New product 3"></div>
         </div>
     </div>
     <div class="featured-products">
         <div class="products-header">
             <div class="line"></div>
-            <div class="products-header-text">
-                Featured Products
-            </div>
+            <span class="products-header-text">Featured Products</span>
             <div class="products-header-arrows">
-                <a>
-                    <div class="featured-products-header-arrow" title="Previous product">
-                                <i class="fa-solid fa-angle-left"></i>
-                    </div>
-                </a>
-                <a>
-                    <div class="featured-products-header-arrow" title="Next product">
-                                <i class="fa-solid fa-angle-right"></i>
-                    </div>
-                </a>
+                <div class="featured-products-header-arrow" title="Previous product">
+                    <i class="fa-solid fa-angle-left"></i>
+                </div>
+                <div class="featured-products-header-arrow" title="Next product">
+                    <i class="fa-solid fa-angle-right"></i>
+                </div>
             </div>
         </div>
         <div class="featured-products-images">
@@ -237,29 +222,29 @@
                 <img src="images/woman1.png" alt="image-1">
                 <div class="product-inf">
                     <div class="product-description" title="">
-                        <div class="product-description-title">
+                        <p class="product-description-title">
                             Product Title here
-                        </div>
-                        <div class="product-description-text">
+                        </p>
+                        <p class="product-description-text">
                             Short Description here
-                        </div>
+                        </p>
                     </div>
                     <div class="product-icons">
-                    <div class="product-icon" title="Arrows">
-                        <i class="fa-solid fa-arrow-right-arrow-left"></i>
+                        <div class="product-icon" title="Arrows">
+                            <i class="fa-solid fa-arrow-right-arrow-left"></i>
+                        </div>
+                        <div class="product-icon" title="Whislost">
+                            <i class="fa-solid fa-gift"></i>
+                        </div>
+                        <div class="product-icon" title="Add to cart">
+                            <i class="fa-solid fa-shopping-cart"></i>
+                        </div>
+                        <div class="product-icon-price">
+                            <span class="dollar-sign">$</span>
+                            <span class="dollar">99.</span>
+                            <span class="cents">00</span>
+                        </div>
                     </div>
-                    <div class="product-icon" title="Whislost">
-                        <i class="fa-solid fa-gift"></i>
-                    </div>
-                    <div class="product-icon" title="Add to cart">
-                        <i class="fa-solid fa-shopping-cart"></i>
-                    </div>
-                    <div class="product-icon-price">
-                        <span class="dollar-sign">$</span>
-                        <span class="dollar">99.</span>
-                        <span class="cents">00</span>
-                    </div>
-                </div>
                 </div>
                 <div class="note red-note">20% OFF</div>
             </div>
@@ -267,12 +252,12 @@
                 <img src="images/woman2.png" alt="image-2">
                 <div class="product-inf">
                     <div class="product-description" title="">
-                        <div class="product-description-title">
+                        <p class="product-description-title">
                             Product Title here
-                        </div>
-                        <div class="product-description-text">
+                        </p>
+                        <p class="product-description-text">
                             Short Description here
-                        </div>
+                        </p>
                     </div>
                     <div class="product-icons">
                         <div class="product-icon" title="Arrows">
@@ -296,12 +281,12 @@
                 <img src="images/woman3.png" alt="image-3">
                 <div class="product-inf">
                     <div class="product-description" title="">
-                        <div class="product-description-title">
+                        <p class="product-description-title">
                             Product Title here
-                        </div>
-                        <div class="product-description-text">
+                        </p>
+                        <p class="product-description-text">
                             Short Description here
-                        </div>
+                        </p>
                     </div>
                     <div class="product-icons">
                         <div class="product-icon" title="Arrows">
@@ -326,12 +311,12 @@
                 <img src="images/woman4.png" alt="image-4">
                 <div class="product-inf">
                     <div class="product-description" title="">
-                        <div class="product-description-title">
+                        <p class="product-description-title">
                             Product Title here
-                        </div>
-                        <div class="product-description-text">
+                        </p>
+                        <p class="product-description-text">
                             Short Description here
-                        </div>
+                        </p>
                     </div>
                     <div class="product-icons">
                         <div class="product-icon" title="Arrows">
@@ -348,11 +333,11 @@
                             <span class="dollar">99.</span>
                             <span class="cents">00</span>
                         </div>
-                        </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
    
     <!--Часть Тани конец-->
 
